<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compuvil.gr5.lab1ui.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/new_contact"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/title"
            android:hint="@string/name"
            android:inputType="textCapWords|textNoSuggestions"
            android:textAlignment="center"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/name"
            android:hint="@string/last_name"
            android:inputType="textCapWords|textNoSuggestions"
            android:textAlignment="center"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lastName"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textSize="15sp" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/bdLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/born_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:text="@string/born_date"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtBd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/dd_mm_yy"
                android:textAlignment="center"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnBd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="onClick"
                android:text="@string/setup"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bdLayout"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:text="@string/country"
            android:textSize="15sp" />

        <AutoCompleteTextView
            android:id="@+id/autoCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/bdLayout"
            android:layout_toRightOf="@id/txtCountry"
            android:ems="10"
            android:hint="@string/ex_colombia"
            android:textAlignment="center"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/autoCountry"
            android:hint="@string/telephone"
            android:inputType="phone"
            android:textAlignment="center"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/telephone"
            android:hint="@string/address"
            android:inputType="textNoSuggestions"
            android:textAlignment="center"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/address"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/txtHobbies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/email"
            android:text="@string/hobbies"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/hobSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/email"
            android:layout_toRightOf="@id/txtHobbies"
            android:textAlignment="center"
            android:textSize="15sp"></Spinner>

        <TextView
            android:id="@+id/txtFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/hobSpinner"
            android:layout_marginTop="5dp"
            android:text="@string/favorite"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/cbFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/hobSpinner"
            android:checked="false"

            />


    </RelativeLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtShow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:maxLines="6"
            android:scrollbars="vertical"
            />

        <Button
            android:id="@+id/btnShow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/show">
        </Button>

    </LinearLayout>

</LinearLayout>
